# rss-feed

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml  spec.md
.github/workflows/: build_rss.yml
app/: config.py  feed_builder.py  main.py  models.py
app/sources/: __init__.py  base.py  generic_rss.py  youtube.py
docs/: feed.xml
tests/: test_feed_builder.py  test_normalization.py
